--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,9 +4,9 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:N4VmiZmAnMDn0qU=,iv:IyKIE/81QmZ7pUmTYWXi0KNKpBBR/78YThfyLF/qqfY=,tag:9ihNqc97lI4BeIfSqoDcjw==,type:str]
-    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:NRRTibo7p2UCU7QEH+O6jIULRwfNFw==,iv:oRzwABTw9inF4nRiM/RWKWafGUlj1uJDmi+j19Kmcpc=,tag:oicc56DTfIACMl3TXAFvdA==,type:str]
-    SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:D+Fw2fCqyv+gLcPTG/0eZcd9gnHePn8cZW0i/p/YFgHdQX6z,iv:jdN5B6Wmxiw5lduTr6DO+JZyu5GWiMEtsRhHrfsqXa0=,tag:ze+hlgXt47RqwPA3lTy1aA==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:80uJS8gxeQ2Klks=,iv:F99fu05ZcY2oMpdiRgwFb8IZz7IfAm32MCxVSfHshRc=,tag:33sXyZD6CDf0U4qX2j6Ydw==,type:str]
+    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:TfpAwy9sEZHeAi7PsLoH2A4afTQ76A==,iv:zWOn5Ewq0vjnsa6WIF+y3yTSbncQi3OOJiGaCFMeeDo=,tag:qypSKyIi/xa0C5KjhSDsqw==,type:str]
+    SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:n8MdywjlNspuHU/NwvlknoS5TIDRFUac0gjgLMJPWWcnotbd,iv:LyJGNSjA4M5B+7FXWrPu37okEeoHRf86Vf8/ENT+D6s=,tag:CRvKMk6n+ruIXv1Dx7QhKw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -16,14 +16,14 @@ sops:
         - recipient: age19jc9zp5pc7me0wkx28kc2ypr9qh6t9zphn3fdk63ae9dz9a2h5gsh4w866
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB0YzU5WHhaZjI5d2gxb0FW
-            QlFMNzlySkhuVnRGN1pPeTNZUnVCckxjNmlvCjlLWkNLbmlFNTA0VWNwRzR2U3dZ
-            MHZXQ0htWDNmcUlFU29aZ0ZvaHk3UW8KLS0tIGpJeW9pMVBFUXBldjMrNU5QRHNU
-            a2FHSG5jSm5UUEhrUGw0QVdPZmNSaGcKvD5DYHp39qOozs+awAxh50f6X6zAzDfE
-            lUYbdBVoYNV7YqoafEH2mpxjqcwJY2IN4rzFYJDSqSb8o7PHyIkMZg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBJVUQ1TU1idFI1YkN1UDB0
+            bHRMOEk1SitWOVNBYTBXbEN2czAyeXBteUdzCi9NYkpYTFpmTVQzLzJWQkFnK3BN
+            dUx3MW1hTzFjcDJPQmo1R2ZxUGtkOVUKLS0tIGRCc0FMdGQwYjI5bUc4SDllalB1
+            c2orZnhzNjJJUmZKVmN5YXNpT3YwV1UKxMKWrTDgSQd+IJoxB6s2g52K/Fx2Ixww
+            taexhpaNH50MmQIbB3Zds4GiD3SAJo2+aScG/x2Bok+15cYQZbNimA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-09-02T16:48:19Z"
-    mac: ENC[AES256_GCM,data:7cDpue/1pgrY5m85qZtGoGSF9hsDxlJ7iWjqmiPfQnUVIc1XGycLRkLVY5nGl2o/JpavC8atba1FFeDLiPXVAb3Z23AQv+FpRedSRr3muslWOSejYkCePshK8dKJDVAez550COCDugvig3XdfCx2Q4IbhlpiezEJFmGEpgKHuFw=,iv:scp/fZG+21vLo5QKUJ2XSMEBe2y8YPdFG0m0HENHxW8=,tag:VWfMNcHVBPJXQGIq+/cs9A==,type:str]
+    lastmodified: "2024-09-02T21:27:38Z"
+    mac: ENC[AES256_GCM,data:Alck+3221xyMEUuNLArNNX6Gz9ki6He2L2MDvb6vtq+GQ0kKZ7JiAvbIMddKfXUobAtWD52I9rIwst8DAVzydoNn7CvB9WUbnKqKAP+mTibQ/psd4ToMaQ5bLkTZUUUrjFo+L5OspftNtTvhdy9HVK59r7ljlEboAN9VV7GI9I0=,iv:6ZPmYzQ7cBCL/ZcYzkuT1fU23GZPPe+Frs++Gi3cDRg=,tag:tJW32RJURx/Wpq3uDejHLw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.0
