--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,9 +4,9 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:80uJS8gxeQ2Klks=,iv:F99fu05ZcY2oMpdiRgwFb8IZz7IfAm32MCxVSfHshRc=,tag:33sXyZD6CDf0U4qX2j6Ydw==,type:str]
-    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:TfpAwy9sEZHeAi7PsLoH2A4afTQ76A==,iv:zWOn5Ewq0vjnsa6WIF+y3yTSbncQi3OOJiGaCFMeeDo=,tag:qypSKyIi/xa0C5KjhSDsqw==,type:str]
-    SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:n8MdywjlNspuHU/NwvlknoS5TIDRFUac0gjgLMJPWWcnotbd,iv:LyJGNSjA4M5B+7FXWrPu37okEeoHRf86Vf8/ENT+D6s=,tag:CRvKMk6n+ruIXv1Dx7QhKw==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:MwwD/bDoAg6nWi4=,iv:RDivGhUJue3qYxe9JDh/1m97iMVEhq4rHg9tLyaEWiM=,tag:zkIdT1Ip3WvtUq2CdrDx4w==,type:str]
+    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:hDxQP8W6dpg7Dfm/h1pJBFJTxKSSew==,iv:HuEXfH2KILoSHejq8pZpXBN/EOURf6vmqBHYV53iwfU=,tag:UTpAiudj8kzpf4cECS5Q3w==,type:str]
+    SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:shZmo4bjXKR6tGKmL6j/nadzkgvPBAC+iiZsQy8jLqtemrbD,iv:yZxW6jLcL6I1pktJKS6cyVsVyE40ZEV4NxAfMe1kt3U=,tag:skOwd95GqH8URwi4QkYNsw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -16,14 +16,14 @@ sops:
         - recipient: age19jc9zp5pc7me0wkx28kc2ypr9qh6t9zphn3fdk63ae9dz9a2h5gsh4w866
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBJVUQ1TU1idFI1YkN1UDB0
-            bHRMOEk1SitWOVNBYTBXbEN2czAyeXBteUdzCi9NYkpYTFpmTVQzLzJWQkFnK3BN
-            dUx3MW1hTzFjcDJPQmo1R2ZxUGtkOVUKLS0tIGRCc0FMdGQwYjI5bUc4SDllalB1
-            c2orZnhzNjJJUmZKVmN5YXNpT3YwV1UKxMKWrTDgSQd+IJoxB6s2g52K/Fx2Ixww
-            taexhpaNH50MmQIbB3Zds4GiD3SAJo2+aScG/x2Bok+15cYQZbNimA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBnd0Fqbm96dmt6TnFuaUQ0
+            NEQvR3NORUo5M2ZUNHlaTTNIdDlBTW5YMkhNCmdoVXFUQ3FyZGgyL0w5U2pHNTRB
+            bW1qdHRqdEVYdVhFSSt4Y2RXL3ZnQ3MKLS0tIFh5cGZVY2hPdGV5UmEwdGwvM3Rn
+            a29wbHpSbVdSVHd4ODU2Y2dXNVdJWDAK/K71XKlVEgePizk4m38VLflfCU4tSjHf
+            1w4CdGu1y1wMOH6SQSgRPdTksWLSTwplbPaGZZ7xChjQG6Ol9EdHZw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-09-02T21:27:38Z"
-    mac: ENC[AES256_GCM,data:Alck+3221xyMEUuNLArNNX6Gz9ki6He2L2MDvb6vtq+GQ0kKZ7JiAvbIMddKfXUobAtWD52I9rIwst8DAVzydoNn7CvB9WUbnKqKAP+mTibQ/psd4ToMaQ5bLkTZUUUrjFo+L5OspftNtTvhdy9HVK59r7ljlEboAN9VV7GI9I0=,iv:6ZPmYzQ7cBCL/ZcYzkuT1fU23GZPPe+Frs++Gi3cDRg=,tag:tJW32RJURx/Wpq3uDejHLw==,type:str]
+    lastmodified: "2024-09-03T14:26:28Z"
+    mac: ENC[AES256_GCM,data:+61lqQw/pAaCgPqgWBK97/qa6up2DLlrA31aGJyjWnIEjhpDprr0+QWvDWqq74aijiYW2imV/nTjKtWjfoNZrSAiKx5poYRixa2L1f6QzQg3ArgTlj1iSjq1hnc6D9it6xJMv5xgfyUJnJnJqtzvpPL/atDsUwJKouruMaLrpY0=,iv:8puTqEj6y8rxoQ1UUk6Xau6wFu8q2C8Y7594Rc+DNss=,tag:lwfMzUS9mJ+9Tv0aG3X7Wg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.0
