--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,9 +4,9 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:MwwD/bDoAg6nWi4=,iv:RDivGhUJue3qYxe9JDh/1m97iMVEhq4rHg9tLyaEWiM=,tag:zkIdT1Ip3WvtUq2CdrDx4w==,type:str]
-    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:hDxQP8W6dpg7Dfm/h1pJBFJTxKSSew==,iv:HuEXfH2KILoSHejq8pZpXBN/EOURf6vmqBHYV53iwfU=,tag:UTpAiudj8kzpf4cECS5Q3w==,type:str]
-    SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:shZmo4bjXKR6tGKmL6j/nadzkgvPBAC+iiZsQy8jLqtemrbD,iv:yZxW6jLcL6I1pktJKS6cyVsVyE40ZEV4NxAfMe1kt3U=,tag:skOwd95GqH8URwi4QkYNsw==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:cFVkArxtwTs3TFU=,iv:U+dtMKclgtL4Zn+nzqwLm91QcykeSXAbD1cVEJH9wj4=,tag:siLylQaV01hZX6vCzadhdQ==,type:str]
+    SECRET_ACME_EMAIL: ENC[AES256_GCM,data:umFVEQYeClbFMxNjoV4W/tkx3G/8tA==,iv:M4sy3fiDQls3wGJc6ynhAJuYdjsHgM96220pzffjIok=,tag:RAaje5Bvu2OZAT7qBObBxw==,type:str]
+    SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:aTcDphHM2rIWJgHtpXG9nimuPqwgjm495s8g4qW6I2fwW+L8,iv:WuF8fRqUORdIB7aaDnXvivJMf44EXN6h3csJugCTXsU=,tag:ZYmhJ/Qh8BS3YZgv6KccmA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -16,14 +16,14 @@ sops:
         - recipient: age19jc9zp5pc7me0wkx28kc2ypr9qh6t9zphn3fdk63ae9dz9a2h5gsh4w866
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBnd0Fqbm96dmt6TnFuaUQ0
-            NEQvR3NORUo5M2ZUNHlaTTNIdDlBTW5YMkhNCmdoVXFUQ3FyZGgyL0w5U2pHNTRB
-            bW1qdHRqdEVYdVhFSSt4Y2RXL3ZnQ3MKLS0tIFh5cGZVY2hPdGV5UmEwdGwvM3Rn
-            a29wbHpSbVdSVHd4ODU2Y2dXNVdJWDAK/K71XKlVEgePizk4m38VLflfCU4tSjHf
-            1w4CdGu1y1wMOH6SQSgRPdTksWLSTwplbPaGZZ7xChjQG6Ol9EdHZw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB3VWlOYndwVE1SUVBXNEc5
+            MktJcmNxaTRPVWZxR01ZZWlXR2VPV3RocVc4CjNHSHppWXk5TnkyT0dPaVk2Tzg4
+            MmtCc0JackNRRS9GK3V3WmtFR2VKZXMKLS0tIDFTL1hwWjQycC9iL09HZ3pROWEr
+            emJvRzVZWGNQOU5ySjdaN3ZIcUNFRzgKyWaoVuZgc6ndqDpKiEcMyYcWcHbgDxy+
+            7PgDn1Tf18qCiLWnyvAuybybQ3nUzxxGTAnYZJ+2mlCW5J00uYsHEg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-09-03T14:26:28Z"
-    mac: ENC[AES256_GCM,data:+61lqQw/pAaCgPqgWBK97/qa6up2DLlrA31aGJyjWnIEjhpDprr0+QWvDWqq74aijiYW2imV/nTjKtWjfoNZrSAiKx5poYRixa2L1f6QzQg3ArgTlj1iSjq1hnc6D9it6xJMv5xgfyUJnJnJqtzvpPL/atDsUwJKouruMaLrpY0=,iv:8puTqEj6y8rxoQ1UUk6Xau6wFu8q2C8Y7594Rc+DNss=,tag:lwfMzUS9mJ+9Tv0aG3X7Wg==,type:str]
+    lastmodified: "2024-09-03T15:12:06Z"
+    mac: ENC[AES256_GCM,data:XetsOOYbplcGzMdso8BeTTKoXwMuxn8KCt3o1mF4li7mvUNKDi8885BnjhUHMky2DR6OUasU/EVfzIkAwkVG4N9vg8AoQWRiOb6DuC4nJKwGBvps33bQi1Xw/k/EGHKZXK/nSF7JEsaJfOoEnHRn8+vdkJoQz6BSqmA0pO3tBeQ=,iv:ExRbaSwx7BGOjlsVi2fuOsyoXkoRsFFHw9Zr7NC2zWA=,tag:DDC+Gfsr8OiaPAS8X3LhnQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.0
