--- a/kubernetes/apps/monitoring/jaeger/jaeger.yaml
+++ b/kubernetes/apps/monitoring/jaeger/jaeger.yaml
@@ -18,3 +18,7 @@ spec:
     jaeger:
       create: true
       namespace: monitoring
+    rbac:
+      create: true
+      pspEnabled: true
+      clusterRole: true
