--- a/kubernetes/apps/istio/kiali.yaml
+++ b/kubernetes/apps/istio/kiali.yaml
@@ -41,6 +41,7 @@ spec:
                               name: kiali
                               port:
                                 number: 20001
+        istio_namespace: istio-system
         external_services:
           custom_dashboards:
             enabled: true
