--- a/kubernetes/apps/istio/kiali.yaml
+++ b/kubernetes/apps/istio/kiali.yaml
@@ -53,6 +53,7 @@ spec:
           prometheus:
             enabled: true
             in_cluster_url: http://kube-prometheus-stack-prometheus.monitoring.svc.cluster.local:9090
+            url: http://kube-prometheus-stack-prometheus.monitoring.svc.cluster.local:9090
           tracing:
             enabled: true
             in_cluster_url: http://jaeger-jaeger-operator-jaeger-query.monitoring.svc.cluster.local:16685
