--- a/kubernetes/apps/istio/kiali.yaml
+++ b/kubernetes/apps/istio/kiali.yaml
@@ -17,6 +17,9 @@ spec:
       create: true
       namespace: istio-system
       spec:
+        istio_labels:
+          app_label_name: "app.kubernetes.io/name"
+          version_label_name: "app.kubernetes.io/version"
         auth:
           strategy: anonymous
         deployment:
@@ -49,11 +52,11 @@ spec:
             root_namespace: istio-system
           grafana:
             enabled: true
-            in_cluster_url: http://kube-prometheus-stack-grafana.monitoring.svc.cluster.local:3000
+            url: http://kube-prometheus-stack-grafana.monitoring.svc.cluster.local:3000
           prometheus:
             enabled: true
             in_cluster_url: http://kube-prometheus-stack-prometheus.monitoring.svc.cluster.local:9090
             url: http://kube-prometheus-stack-prometheus.monitoring.svc.cluster.local:9090
           tracing:
             enabled: true
-            in_cluster_url: http://jaeger-jaeger-operator-jaeger-query.monitoring.svc.cluster.local:16685
+            url: http://jaeger-jaeger-operator-jaeger-query.monitoring.svc.cluster.local:16685
