--- a/kubernetes/apps/istio/kiali.yaml
+++ b/kubernetes/apps/istio/kiali.yaml
@@ -57,10 +57,13 @@ spec:
           grafana:
             enabled: true
             url: http://kube-prometheus-stack-grafana.monitoring.svc.cluster.local:3000
+            in_cluster_url: http://kube-prometheus-stack-grafana.monitoring.svc.cluster.local:3000
           prometheus:
             enabled: true
             in_cluster_url: http://kube-prometheus-stack-prometheus.monitoring.svc.cluster.local:9090
             url: http://kube-prometheus-stack-prometheus.monitoring.svc.cluster.local:9090
           tracing:
             enabled: true
-            url: http://jaeger-jaeger-operator-jaeger-query.monitoring.svc.cluster.local:16685
+            url: http://jaeger-jaeger-operator-jaeger-query.monitoring.svc.cluster.local:16685/jaeger
+            in_cluster_url: http://jaeger-jaeger-operator-jaeger-query.monitoring.svc.cluster.local:16685/jaeger
+            use_grpc: true
