--- a/kubernetes/apps/monitoring/kube-prometheus-stack/istio-wasm-extension-dashboard.yaml
+++ b/kubernetes/apps/monitoring/kube-prometheus-stack/istio-wasm-extension-dashboard.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: istio-wasm-extension-dashboard
+  namespace: monitoring
   labels:
     grafana_dashboard: "100"
 data:
