--- a/kubernetes/apps/istio/pod-monitors.yaml
+++ b/kubernetes/apps/istio/pod-monitors.yaml
@@ -14,6 +14,6 @@ spec:
     matchLabels:
       app: istiod
   podMetricsEndpoints:
-    - port: "15014"
+    - port: http-monitoring
       interval: 30s
       path: /metrics
