--- a/kubernetes/apps/istio/pod-monitors.yaml
+++ b/kubernetes/apps/istio/pod-monitors.yaml
@@ -13,7 +13,7 @@ spec:
   selector:
     matchLabels:
       app: istiod
-      app.kubernetes.io/managed-by: Helm
+      operator.istio.io/component: Pilot
   podMetricsEndpoints:
     - port: http-monitoring
       interval: 30s
