Add istio pod monitors

--- a/kubernetes/apps/istio/kustomization.yaml
+++ b/kubernetes/apps/istio/kustomization.yaml
@@ -6,4 +6,6 @@ resources:
   - ./istio-d.yaml
   - ./istio-ingress.yaml
   - ./kiali.yaml
-  - ./pod-monitors.yaml
+  - ./jaeger.yaml
+  - ./grafana.yaml
+  - ./prometheus.yaml
