--- a/kubernetes/apps/istio/ingress.yaml
+++ b/kubernetes/apps/istio/ingress.yaml
@@ -2,6 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: kiali-ingress
+  namespace: istio-system
   annotations:
     cert-manager.io/cluster-issuer: letsencrypt-production
 spec:
