--- a/kubernetes/apps/default/portainer/namespace.yaml
+++ b/kubernetes/apps/default/portainer/namespace.yaml
@@ -2,3 +2,7 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: portainer
+  labels:
+    istio-injection: enabled
+    pod-security.kubernetes.io/enforce: privileged
+    pod-security.kubernetes.io/enforce-version: latest
