--- a/kubernetes/apps/default/tubearchivist/redis-virtualservice.yaml
+++ b/kubernetes/apps/default/tubearchivist/redis-virtualservice.yaml
@@ -5,10 +5,23 @@ metadata:
   namespace: default
 spec:
   hosts:
-    - tubearchivist-redis
-  http:
+    - tubearchivist-redis.default.svc.cluster.local
+  tcp:
+    - match:
+        - port: 6379
     - route:
         - destination:
-            host: tubearchivist-redis
+            host: tubearchivist-redis.default.svc.cluster.local
             port:
               number: 6379
+---
+apiVersion: networking.istio.io/v1
+kind: DestinationRule
+metadata:
+  name: tubearchivist-redis
+  namespace: default
+spec:
+  host: tubearchivist-redis.default.svc.cluster.local
+  trafficPolicy:
+      tls:
+        mode: DISABLE
