Update redis service port name

--- a/kubernetes/apps/default/tubearchivist/tubearchivist.yaml
+++ b/kubernetes/apps/default/tubearchivist/tubearchivist.yaml
@@ -95,7 +95,7 @@ spec:
         enabled: true
         controller: redis
         ports:
-          http:
+          tcp-redis:
             enabled: true
             primary: true
             port: 6379
