Update redis service port name

--- a/kubernetes/apps/default/tubearchivist/redis-virtualservice.yaml
+++ b/kubernetes/apps/default/tubearchivist/redis-virtualservice.yaml
@@ -9,7 +9,7 @@ spec:
   tcp:
     - match:
         - port: 6379
-    - route:
+      route:
         - destination:
             host: tubearchivist-redis.default.svc.cluster.local
             port:
