--- a/kubernetes/apps/default/tubearchivist/tubearchivist.yaml
+++ b/kubernetes/apps/default/tubearchivist/tubearchivist.yaml
@@ -101,7 +101,7 @@ spec:
             port: 6379
     ingress:
       main:
-        enabled: false
+        enabled: true
         className: internal
         annotations:
           cert-manager.io/cluster-issuer: letsencrypt-production
