--- a/kubernetes/apps/istio/istio-ingress.yaml
+++ b/kubernetes/apps/istio/istio-ingress.yaml
@@ -18,3 +18,7 @@ spec:
         name: istio
         namespace: flux-system
       interval: 1m
+  values:
+    service:
+      annotations:
+        io.cilium/lb-ipam-ips: "192.168.1.205"
