--- a/kubernetes/apps/istio/kiali.yaml
+++ b/kubernetes/apps/istio/kiali.yaml
@@ -36,7 +36,7 @@ data:
     istio_labels:
       app_label_name: app.kubernetes.io/name
       version_label_name: app.kubernetes.io/version
-      ingress_gateway_label: app=istio-ingress
+      ingress_gateway_label: istio=ingress
     additional_display_details:
       - annotation: kiali.io/api-spec
         icon_annotation: kiali.io/api-type
