--- a/kubernetes/apps/network/namespace.yaml
+++ b/kubernetes/apps/network/namespace.yaml
@@ -5,3 +5,6 @@ metadata:
   name: network
   labels:
     kustomize.toolkit.fluxcd.io/prune: disabled
+    istio-injection: enabled
+    pod-security.kubernetes.io/enforce: privileged
+    pod-security.kubernetes.io/enforce-version: latest
