--- a/kubernetes/apps/default/tubearchivist/gateway.yaml
+++ b/kubernetes/apps/default/tubearchivist/gateway.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: default
 spec:
   selector:
-    app.kubernetes.io/name: tubearchivist-main
+    app.kubernetes.io/name: tubearchivist
   servers:
     - hosts:
         - tubearchivist.internal.${SECRET_DOMAIN}
