--- a/kubernetes/apps/monitoring/loki/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/loki/helmrelease.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   chart:
     spec:
-      chart: loki
+      chart: loki-distributed
       reconcileStrategy: ChartVersion
       sourceRef:
         kind: HelmRepository
@@ -20,8 +20,6 @@ spec:
   values:
     mode: SingleBinary
     loki:
-      commonConfig:
-        replication_factor: 1
       storage:
         type: 'filesystem'
       schemaConfig:
@@ -33,11 +31,3 @@ spec:
             period: 24h
           object_store: filesystem # we're storing on filesystem so there's no real persistence here.
           schema: v13
-    singleBinary:
-      replicas: 1
-    read:
-      replicas: 0
-    backend:
-      replicas: 0
-    write:
-      replicas: 0
