--- a/kubernetes/apps/monitoring/loki/virtual-service.yaml
+++ b/kubernetes/apps/monitoring/loki/virtual-service.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   hosts:
     - loki-gateway.monitoring.svc.cluster.local
-  tcp:
+  http:
     - match:
         - port: 80
       route:
@@ -14,14 +14,3 @@ spec:
             host: loki-gateway.monitoring.svc.cluster.local
             port:
               number: 80
----
-apiVersion: networking.istio.io/v1
-kind: DestinationRule
-metadata:
-  name: loki
-  namespace: monitoring
-spec:
-  host: loki-gateway.monitoring.svc.cluster.local
-  trafficPolicy:
-    tls:
-      mode: DISABLE
