Disable loki auth

--- a/kubernetes/apps/monitoring/loki/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/loki/helmrelease.yaml
@@ -20,6 +20,7 @@ spec:
     fullnameOverride: loki
     deploymentMode: SingleBinary
     loki:
+      auth_enabled: false
       commonConfig:
         replication_factor: 1
       storage:
