--- a/kubernetes/apps/komodor/komodor.yaml
+++ b/kubernetes/apps/komodor/komodor.yaml
@@ -11,7 +11,8 @@ spec:
       reconcileStrategy: ChartVersion
       sourceRef:
         kind: HelmRepository
-        name: flux-system
+        name: komodor
+        namespace: flux-system
   install:
     createNamespace: true
   interval: 6h0m0s
