--- a/kubernetes/apps/komodor/secret.sops.yaml
+++ b/kubernetes/apps/komodor/secret.sops.yaml
@@ -4,4 +4,24 @@ metadata:
     name: komodor-secret
     namespace: komodor
 stringData:
-    apiKey: "c7b69e16-a14e-4f67-ab58-6201815f80a0"
+    apiKey: ENC[AES256_GCM,data:IV5HeWivvjF7G2yjdyg7lEL7pYCf9wR2seYWZeqx9YWuAq1f,iv:wQO2IFJW45n2wAMi7cvPrWX/MDrvKsCUfcCr5FQ3D3s=,tag:CRMYjiHIW2Qi3C87G2S4VA==,type:str]
+sops:
+    kms: []
+    gcp_kms: []
+    azure_kv: []
+    hc_vault: []
+    age:
+        - recipient: age19jc9zp5pc7me0wkx28kc2ypr9qh6t9zphn3fdk63ae9dz9a2h5gsh4w866
+          enc: |
+            -----BEGIN AGE ENCRYPTED FILE-----
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB4TE95QWdhT0FZYmNYaGZK
+            WUo1THRGOFNXWkppWUQ4TDRrbm80SlNjTG1zCllDaG1EeFpKTlFMR0Jub2pmc3h5
+            eVlGbGNUc3owVkVOaURGQnVlWjlPTHcKLS0tIEs2cHBjTUw3VzN4aEtLTVJnbDN2
+            V1FjeGZ2Q0RuOElpTFhRb0UyeDJnUzQK8yDZrntLUTdsORaWd3clvzox7WEOoMNk
+            KFFjeQ9FXQmNRPVmS0ca80rxFKcBFyHu2lYBQIwlMloaw5kQmzcGWA==
+            -----END AGE ENCRYPTED FILE-----
+    lastmodified: "2024-09-06T07:20:40Z"
+    mac: ENC[AES256_GCM,data:a/0ya+wd9AIGwSeSOHpmuGA38bYrm8rYrtp8FjW+4AM7ikiZCebv9zWARjatqt8JdE/JZQGBtQds6iSd5jE3rl8BoxgcInZEM1kQSMQtVzQgraDl72Axy2p7YdW1oBdA1d59fWOVNXc7kMz7B4Mf9tDnOgca0Lr4CUb3EGj6jtw=,iv:AYPxvmnALbzUdaxJ+orETDjdq7c6eNz5TF97ZBudZSc=,tag:Z9g+AKmWWLRnyCpa+Qj3Xg==,type:str]
+    pgp: []
+    encrypted_regex: ^(data|stringData)$
+    version: 3.9.0
