--- a/kubernetes/apps/cert-manager/cert-manager/issuers/issuers.yaml
+++ b/kubernetes/apps/cert-manager/cert-manager/issuers/issuers.yaml
@@ -37,3 +37,12 @@ spec:
         selector:
           dnsZones:
             - "${SECRET_DOMAIN}"
+---
+apiVersion: cert-manager.io/v1
+kind: Issuer
+metadata:
+  name: linkerd-trust-anchor
+  namespace: linkerd
+spec:
+  ca:
+    secretName: linkerd-trust-anchor
