--- a/kubernetes/apps/cert-manager/cert-manager/issuers/kustomization.yaml
+++ b/kubernetes/apps/cert-manager/cert-manager/issuers/kustomization.yaml
@@ -4,5 +4,5 @@ kind: Kustomization
 resources:
   - ./secret.sops.yaml
   - ./issuers.yaml
-  - ./linkerd-identity-issuer.yaml
-  - ./linkerd-issuer.yaml
+#  - ./linkerd-identity-issuer.yaml
+#  - ./linkerd-issuer.yaml
