--- a/kubernetes/apps/linkerd/linkerd.yaml
+++ b/kubernetes/apps/linkerd/linkerd.yaml
@@ -77,23 +77,23 @@ spec:
     enablePodAntiAffinity: false
     enablePodDisruptionBudget: false
     enablePprof: false
-    identity:
-      externalCA: false
-      issuer:
-        clockSkewAllowance: 20s
-        issuanceLifetime: 24h0m0s
-        scheme: linkerd.io/tls
-        tls:
-          crtPEM: ""
-          keyPEM: ""
-      kubeAPI:
-        clientBurst: 200
-        clientQPS: 100
-      livenessProbe:
-        timeoutSeconds: 1
-      readinessProbe:
-        timeoutSeconds: 1
-      serviceAccountTokenProjection: true
+#    identity:
+#      externalCA: false
+#      issuer:
+#        clockSkewAllowance: 20s
+#        issuanceLifetime: 24h0m0s
+#        scheme: linkerd.io/tls
+#        tls:
+#          crtPEM: ""
+#          keyPEM: ""
+#      kubeAPI:
+#        clientBurst: 200
+#        clientQPS: 100
+#      livenessProbe:
+#        timeoutSeconds: 1
+#      readinessProbe:
+#        timeoutSeconds: 1
+#      serviceAccountTokenProjection: true
     identityTrustAnchorsPEM: ""
     identityTrustDomain: ""
     imagePullPolicy: IfNotPresent
