--- a/kubernetes/apps/cert-manager/cert-manager/issuers/linkerd-issuer.yaml
+++ b/kubernetes/apps/cert-manager/cert-manager/issuers/linkerd-issuer.yaml
@@ -1,9 +1,16 @@
+apiVersion: cert-manager.io/v1
+kind: ClusterIssuer
+metadata:
+  name: linkerd-trust-root-issuer
+  namespace: cert-manager
+spec:
+  selfSigned: {}
 ---
 apiVersion: cert-manager.io/v1
 kind: Issuer
 metadata:
-  name: linkerd-trust-anchor
+  name: linkerd-identity-issuer
   namespace: linkerd
 spec:
   ca:
-    secretName: linkerd-trust-anchor
+    secretName: linkerd-identity-trust-anchor
