--- a/kubernetes/apps/cert-manager/cert-manager/app/helmrelease.yaml
+++ b/kubernetes/apps/cert-manager/cert-manager/app/helmrelease.yaml
@@ -41,7 +41,7 @@ spec:
       chart: trust-manager
       sourceRef:
         kind: HelmRepository
-        name: cert-manager
+        name: jetstack
         namespace: flux-system
       interval: 12h
   dependsOn:
