--- a/kubernetes/apps/linkerd/kustomization.yaml
+++ b/kubernetes/apps/linkerd/kustomization.yaml
@@ -6,3 +6,6 @@ resources:
   - ./linkerd.yaml
   - ./secret.sops.yaml
   - ./issuer-secret.sops.yaml
+  - ./linkerd-ca-trust-bundle.yaml
+  - ./linkerd-identity-issuer-cert.yaml
+  - ./linkerd-issuer.yaml
