--- a/kubernetes/apps/linkerd/linkerd-identity-issuer-cert.yaml
+++ b/kubernetes/apps/linkerd/linkerd-identity-issuer-cert.yaml
@@ -1,7 +1,7 @@
 apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
-  name: linkerd-identity-trust-anchor
+  name: linkerd-trust-anchor
   namespace: linkerd
 spec:
   commonName: root.linkerd.cluster.local
@@ -9,11 +9,11 @@ spec:
   duration: 87600h0m0s
   renewBefore: 87264h0m0s
   issuerRef:
-    name: linkerd-trust-root-issuer
-    kind: ClusterIssuer
+    name: linkerd-trust-anchor
+    kind: Issuer
   privateKey:
     algorithm: ECDSA
-  secretName: linkerd-identity-trust-anchor
+  secretName: linkerd-trust-anchor
 ---
 apiVersion: cert-manager.io/v1
 kind: Certificate
@@ -21,18 +21,20 @@ metadata:
   name: linkerd-identity-issuer
   namespace: linkerd
 spec:
+  secretName: linkerd-identity-issuer
+  duration: 48h
+  renewBefore: 25h
+  issuerRef:
+    name: linkerd-trust-anchor
+    kind: Issuer
   commonName: identity.linkerd.cluster.local
+  dnsNames:
+    - identity.linkerd.cluster.local
   isCA: true
+  privateKey:
+    algorithm: ECDSA
   usages:
     - cert sign
     - crl sign
     - server auth
     - client auth
-  duration: 168h0m0s
-  renewBefore: 72h0m0s
-  issuerRef:
-    name: linkerd-identity-issuer
-    kind: Issuer
-  privateKey:
-    algorithm: ECDSA
-  secretName: linkerd-identity-issuer
