--- a/kubernetes/apps/linkerd/linkerd-ca-trust-bundle.yaml
+++ b/kubernetes/apps/linkerd/linkerd-ca-trust-bundle.yaml
@@ -1,12 +1,11 @@
 apiVersion: trust.cert-manager.io/v1alpha1
 kind: Bundle
 metadata:
-  name: linkerd-trust-roots
-  namespace: linkerd
+  name: linkerd-identity-trust-roots
 spec:
   sources:
     - secret:
-        name: "linkerd-trust-anchor"
+        name: "linkerd-identity-trust-roots"
         key: "ca.crt"
   target:
     configMap:
