--- a/kubernetes/apps/linkerd/linkerd-issuer.yaml
+++ b/kubernetes/apps/linkerd/linkerd-issuer.yaml
@@ -1,4 +1,12 @@
 apiVersion: cert-manager.io/v1
+kind: ClusterIssuer
+metadata:
+  name: linkerd-self-signed-issuer
+  namespace: cert-manager
+spec:
+  selfSigned: {}
+---
+apiVersion: cert-manager.io/v1
 kind: Issuer
 metadata:
   name: linkerd-trust-anchor
@@ -6,3 +14,12 @@ metadata:
 spec:
   ca:
     secretName: linkerd-trust-anchor
+---
+apiVersion: cert-manager.io/v1
+kind: ClusterIssuer
+metadata:
+  name: linkerd-trust-anchor
+  namespace: cert-manager
+spec:
+  ca:
+    secretName: linkerd-identity-trust-roots
