--- a/kubernetes/apps/linkerd/viz.yaml
+++ b/kubernetes/apps/linkerd/viz.yaml
@@ -7,7 +7,7 @@ spec:
   interval: 30m
   targetNamespace: linkerd-viz
   dependsOn:
-    - name: linkerd-control-plane
+    - name: linkerd
       namespace: linkerd
   releaseName: linkerd-viz
   chart:
