--- a/kubernetes/apps/linkerd/viz-ingress.yaml
+++ b/kubernetes/apps/linkerd/viz-ingress.yaml
@@ -4,6 +4,7 @@ metadata:
   name: web-ingress
   namespace: linkerd-viz
   annotations:
+    cert-manager.io/cluster-issuer: letsencrypt-production
     nginx.ingress.kubernetes.io/upstream-vhost: $service_name.$namespace.svc.cluster.local:8084
     nginx.ingress.kubernetes.io/configuration-snippet: |
       proxy_set_header Origin "";
