--- a/kubernetes/apps/observability/uptrace/otel-collector-metrics.yaml
+++ b/kubernetes/apps/observability/uptrace/otel-collector-metrics.yaml
@@ -15,7 +15,7 @@ spec:
     otlp/local:
       endpoint: http://uptrace:14317
       tls: { insecure: true }
-      headers: { 'uptrace-dsn': 'http://project2_secret_token@localhost:14318?grpc=14317' }
+      headers: { 'uptrace-dsn': 'http://project2_secret_token@uptrace:14318?grpc=14317' }
   receivers:
     hostmetrics:
       collection_interval: 10s
