--- a/kubernetes/apps/observability/uptrace/uptrace.yaml
+++ b/kubernetes/apps/observability/uptrace/uptrace.yaml
@@ -8,7 +8,7 @@ spec:
   chart:
     spec:
       chart: uptrace
-      reconcileStrategy: ChartVersion
+      reconcileStrategy: Revision
       sourceRef:
         kind: HelmRepository
         name: uptrace
