--- a/kubernetes/apps/linkerd/smi.yaml
+++ b/kubernetes/apps/linkerd/smi.yaml
@@ -7,7 +7,7 @@ spec:
   interval: 30m
   targetNamespace: linkerd-smi
   dependsOn:
-    - name: linkerd-control-plane
+    - name: linkerd
       namespace: linkerd
   releaseName: linkerd-smi
   chart:
