--- a/kubernetes/apps/observability/uptrace/otel-collector-metrics.yaml
+++ b/kubernetes/apps/observability/uptrace/otel-collector-metrics.yaml
@@ -12,10 +12,10 @@ spec:
       detectors: [env, system]
     cumulativetodelta:
   exporters:
-    otlp/local:
-      endpoint: http://uptrace:14317
+    otlp/uptrace:
+      endpoint: http://my-uptrace:14317
       tls: { insecure: true }
-      headers: { 'uptrace-dsn': 'http://project2_secret_token@uptrace:14318?grpc=14317' }
+      headers: { 'uptrace-dsn': 'http://project2_secret_token@my-uptrace:14318?grpc=14317' }
   receivers:
     hostmetrics:
       collection_interval: 10s
