--- a/kubernetes/apps/observability/uptrace/kustomization.yaml
+++ b/kubernetes/apps/observability/uptrace/kustomization.yaml
@@ -2,4 +2,4 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ./uptrace.yaml
-  - ./otel-collector-metrics.yaml
+#  - ./otel-collector-metrics.yaml
