--- a/kubernetes/apps/observability/uptrace/otel-collector-metrics.yaml
+++ b/kubernetes/apps/observability/uptrace/otel-collector-metrics.yaml
@@ -1,4 +1,4 @@
-apiVersion: opentelemetry.io/v1alpha1
+apiVersion: opentelemetry.io/v1beta1
 kind: OpenTelemetryCollector
 metadata:
   name: otel-node-collector
@@ -7,45 +7,46 @@ metadata:
     app: otel-node-collector
 spec:
   mode: daemonset
-  processors:
-    resourcedetection:
-      detectors: [env, system]
-    cumulativetodelta:
-    batch:
-      timeout: 15s
-  exporters:
-    otlp:
-      endpoint: http://my-uptrace:14317
-      tls: { insecure: true }
-      headers: { 'uptrace-dsn': 'http://project2_secret_token@my-uptrace:14318?grpc=14317' }
-  receivers:
-    k8s_cluster:
-      auth_type: serviceAccount
-    hostmetrics:
-      collection_interval: 10s
-      scrapers:
-        # CPU utilization metrics
-        cpu:
-        # Disk I/O metrics
-        disk:
-        # File System utilization metrics
-        filesystem:
-        # CPU load metrics
-        load:
-        # Memory utilization metrics
-        memory:
-        # Network interface I/O metrics & TCP connection metrics
-        network:
-        # Paging/Swap space utilization and I/O metrics
-        paging:
+  config:
+    processors:
+      resourcedetection:
+        detectors: [env, system]
+      cumulativetodelta:
+      batch:
+        timeout: 15s
+    exporters:
+      otlp:
+        endpoint: http://my-uptrace:14317
+        tls: { insecure: true }
+        headers: { 'uptrace-dsn': 'http://project2_secret_token@my-uptrace:14318?grpc=14317' }
+    receivers:
+      k8s_cluster:
+        auth_type: serviceAccount
+      hostmetrics:
+        collection_interval: 10s
+        scrapers:
+          # CPU utilization metrics
+          cpu:
+          # Disk I/O metrics
+          disk:
+          # File System utilization metrics
+          filesystem:
+          # CPU load metrics
+          load:
+          # Memory utilization metrics
+          memory:
+          # Network interface I/O metrics & TCP connection metrics
+          network:
+          # Paging/Swap space utilization and I/O metrics
+          paging:
 
-  service:
-    pipelines:
-      metrics:
-        receivers: [otlp, hostmetrics]
-        processors: [cumulativetodelta, batch, resourcedetection]
-        exporters: [otlp]
-      traces:
-        receivers: [otlp]
-        processors: [batch]
-        exporters: [otlp]
+    service:
+      pipelines:
+        metrics:
+          receivers: [otlp, hostmetrics]
+          processors: [cumulativetodelta, batch, resourcedetection]
+          exporters: [otlp]
+        traces:
+          receivers: [otlp]
+          processors: [batch]
+          exporters: [otlp]
