--- a/kubernetes/apps/observability/uptrace/otel-collector-metrics.yaml
+++ b/kubernetes/apps/observability/uptrace/otel-collector-metrics.yaml
@@ -12,16 +12,8 @@ spec:
       resourcedetection:
         detectors: [env, system]
       cumulativetodelta:
-      batch:
-        timeout: 15s
-    exporters:
-      otlp:
-        endpoint: http://my-uptrace:14317
-        tls: { insecure: true }
-        headers: { 'uptrace-dsn': 'http://project2_secret_token@my-uptrace:14318?grpc=14317' }
+
     receivers:
-      k8s_cluster:
-        auth_type: serviceAccount
       hostmetrics:
         collection_interval: 10s
         scrapers:
@@ -45,8 +37,9 @@ spec:
         metrics:
           receivers: [otlp, hostmetrics]
           processors: [cumulativetodelta, batch, resourcedetection]
-          exporters: [otlp]
-        traces:
-          receivers: [otlp]
-          processors: [batch]
-          exporters: [otlp]
+          exporters: [otlp/uptrace]
+    exporters:
+      otlp/uptrace:
+        endpoint: http://my-uptrace:4317
+        headers: { 'uptrace-dsn': 'http://project2_secret_token@my-uptrace:14318?grpc=14317' }
+        tls: { insecure: true }
