--- a/kubernetes/apps/observability/uptrace/otel-collector-metrics.yaml
+++ b/kubernetes/apps/observability/uptrace/otel-collector-metrics.yaml
@@ -35,7 +35,7 @@ spec:
     service:
       pipelines:
         metrics:
-          receivers: [otlp, hostmetrics]
+          receivers: [otlp/uptrace, hostmetrics]
           processors: [cumulativetodelta, batch, resourcedetection]
           exporters: [otlp/uptrace]
     exporters:
