--- a/kubernetes/apps/observability/uptrace/otel-collector-metrics.yaml
+++ b/kubernetes/apps/observability/uptrace/otel-collector-metrics.yaml
@@ -37,7 +37,7 @@ spec:
     service:
       pipelines:
         metrics:
-          receivers: [otlp, hostmetrics]
+          receivers: [hostmetrics]
           processors: [cumulativetodelta, batch, resourcedetection]
           exporters: [otlp]
     exporters:
