--- a/kubernetes/apps/observability/uptrace/otel-collector-metrics.yaml
+++ b/kubernetes/apps/observability/uptrace/otel-collector-metrics.yaml
@@ -13,35 +13,47 @@ spec:
         detectors: [env, system]
       cumulativetodelta:
       batch:
-        timeout: 15s
+        send_batch_size: 10000
+        timeout: 10s
 
     receivers:
+      otlp:
+        protocols:
+          grpc:
+          http:
       hostmetrics:
-        collection_interval: 10s
         scrapers:
-          # CPU utilization metrics
           cpu:
-          # Disk I/O metrics
           disk:
-          # File System utilization metrics
           filesystem:
-          # CPU load metrics
           load:
-          # Memory utilization metrics
           memory:
-          # Network interface I/O metrics & TCP connection metrics
           network:
-          # Paging/Swap space utilization and I/O metrics
           paging:
+
+    exporters:
+      debug:
+      otlp/uptrace:
+        endpoint: http://my-uptrace:14317
+        tls: { insecure: true }
+        headers:
+          uptrace-dsn: 'http://project2_secret_token@my-uptrace:14318?grpc=14317'
 
     service:
       pipelines:
+        traces:
+          receivers: [otlp]
+          processors: [batch]
+          exporters: [otlp/uptrace, debug]
         metrics:
+          receivers: [otlp]
+          processors: [cumulativetodelta, batch]
+          exporters: [otlp/uptrace, debug]
+        metrics/host:
           receivers: [hostmetrics]
           processors: [cumulativetodelta, batch, resourcedetection]
-          exporters: [otlp]
-    exporters:
-      otlp:
-        endpoint: http://my-uptrace:14317
-        headers: { 'uptrace-dsn': 'http://project2_secret_token@my-uptrace:14318?grpc=14317' }
-        tls: { insecure: true }
+          exporters: [otlp/uptrace, debug]
+        logs:
+          receivers: [otlp]
+          processors: [batch]
+          exporters: [otlp/uptrace, debug]
