--- a/kubernetes/apps/linkerd/smi.yaml
+++ b/kubernetes/apps/linkerd/smi.yaml
@@ -15,6 +15,6 @@ spec:
       chart: linkerd-smi
       sourceRef:
         kind: HelmRepository
-        name: linkerd
+        name: linkerd-smi
         namespace: flux-system
       interval: 12h
