--- a/kubernetes/apps/linkerd/linkerd-identity-issuer-cert.yaml
+++ b/kubernetes/apps/linkerd/linkerd-identity-issuer-cert.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   isCA: true
   commonName: root.linkerd.cluster.local
-  secretName: linkerd-identity-trust-roots
+  secretName: linkerd-trust-anchor
   privateKey:
     algorithm: ECDSA
     size: 256
